log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-log
          persistentVolumeClaim:
            claimName: pvc-1-11
      containers:
        # logger
        - name: log-output-logger
          image: xuanminator/log_output_logger:1.11
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-log
            mountPath: /tmp/logs
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
        # fetcher
        - name: log-output-fetcher
          image: xuanminator/log_output_fetcher:2.1
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-log
            mountPath: /tmp/logs
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
