log_output/manifests/greeter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8088
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   namespace: exercises
#   name: greeter-svc-1
# spec:
#   type: ClusterIP
#   selector:
#     app: greeter
#     version: v1
#   ports:
#     - port: 80
#       protocol: TCP
#       targetPort: 8088
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   namespace: exercises
#   name: greeter-svc-2
# spec:
#   type: ClusterIP
#   selector:
#     app: greeter
#     version: v2
#   ports:
#     - port: 80
#       protocol: TCP
#       targetPort: 8088
