log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
# for ingress
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 8088
# for nodeport dev
# spec:
#   type: NodePort
#   selector:
#     app: simple-http
#   ports:
#   - name: http
#     nodePort : 30080 # exposed port
#     protocol: TCP
#     port: 1234 # cluster internal port
#     targetPort: 8060 # application port
