log_output/manifests/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: log-output-gateway
  namespace: exercises
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - "*"
