log_output/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: log-output-route
  namespace: exercises
spec:
  parentRefs:
    - name: log-output-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /logs/all
        - path:
            type: Exact
            value: /logs/ping
      backendRefs:
        - name: log-output-svc
          port: 80
    - matches:
        - path:
            type: Exact
            value: /
        - path:
            type: Exact
            value: /pingpong
        - path:
            type: Exact
            value: /pings
      backendRefs:
        - name: ping-pong-svc
          port: 80
